# scaler

manifest/: docker-compose.yml  serverless-simulaion.yaml
rust/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  build.rs
rust/proto/: serverless-sim.proto
rust/src/: lib.rs  main.rs  model.rs  pb.rs  platform_client.rs  server.rs
rust/src/model/: instance.rs  meta_data.rs
rust/src/pb/: mod.rs
rust/src/server/: server_impl.rs
