[package]
name = "scaler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
prost = "0.11.9"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.9.2", features = ["transport"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17" }
uuid = { version = "1.4.1", features = ["v4"] }

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }
