[package]
name = "scaler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
crossbeam = "0.8.2"
once_cell = { version = "1.18.0", features = ["parking_lot"] }
prost = "0.11.9"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
tokio-retry = "0.3.0"
tonic = { version = "0.9.2", features = ["transport", "gzip", "tls"] }
tonic-web = "0.9.2"
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4"] }

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }
